fixed color bar spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,7 +143,7 @@ body {
 #colorBar {
     top: 0em;
     left: 10em;
-    width: 84em;
+    width: 85em;
     height: 7.5em;
 }
 
